Split LastSeen into two parts
This makes it easier to track if a node is contacting ACServer AND MQTT rather than just
one or the other
